fix hamburge on mobile menu

--- a/src/sass/layout/_header.sass
+++ b/src/sass/layout/_header.sass
@@ -176,7 +176,7 @@
     +min_md
       display: none
 
-  &__hamburger-btn
+  &__hamburger-btn--dark
     cursor: pointer
     position: relative
     width: 30px
@@ -185,6 +185,20 @@
       width: 30px
       height: 3px
       background: $dark_blue
+      &:not(:last-child)
+        margin-bottom: 5px
+    +min_md
+      display: none
+
+  &__hamburger-btn--light
+    cursor: pointer
+    position: relative
+    width: 30px
+    span
+      display: block
+      width: 30px
+      height: 3px
+      background: $white
       &:not(:last-child)
         margin-bottom: 5px
     +min_md
